# mac_ctf

./: .dockerignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
report/: report.typ
templates/: instructions.html
