[tool.poetry]
name = "mac-ctf"
version = "0.1.0"
description = ""
authors = ["vincent <hankggg2003xd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
gunicorn = "^23.0.0"
waitress = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
